---------------------------------------------
     Pidgin Paranoia Plug-in Change Log
---------------------------------------------

0.1.0
Simon Wenner:
 * Paranoia: Basic plugin structure, libotp API
 * A build system 'from hell'! (but it seems to work)
 * Session and key management documentation
 * Paranoia: CLI functionality
 * Paranoia: Key list search functions
 * Paranoia: Key list is generated from files and can be freed
 * Paranoia: Basic session initialisation
 * Paranoia: Basic session closing
 * Paranoia: Encryptet messages are labelled
 * Paranoia: Working commands: /otp help, info, on, off

Christan Wäckerlin:
 * One-time pad documentation
 * Libotp: xor function
 * Libotp: base64 encode and decode using gnomelib
 * Libotp: encrypt and decrypt
 * Libotp: struct *mypad is generated from keyfile
 * Libotp: Keyfile templates added
 * Libotp: Full keyfile support
 * Added support for the ./configure --disable-otp swich that disables libotp support for development.
 * Added support for protected entropy signaling (i.e. no entropy  signal)
 


Known bugs:
 * /otp info is only working after one message was received
 * the first encrypted sent message is not marked with <secure>
 * /me does not work encrypted
 * there are some anomalies if both set /otp off and one tries to reenable