@@ -48,7 +48,7 @@ void otp_destroy(struct otp* mypad);
    Leaves the message constant. Returns NULL if it fails. */
 char* otp_get_id_from_message(char **message);
 
-/* generates a new key pair (two files) with the name alice and bob of 'size' bytes. If source is NULL, /dev/urandom is used.*/
+/* generates a new key pair (two files) with the name alice and bob of 'size' bytes.*/
 unsigned int otp_generate_key_pair(char* alice, char* bob, char* path, char* source, unsigned int size);
 
 /* encrypts a message with the protected entropy. protected_pos is the position in bytes to use. 
